--- a/configure.in
+++ b/configure.in
@@ -355,7 +355,7 @@ AC_CHECK_HEADER(sys/byteorder.h, [AC_DEFINE(HAVE_BYTEORDER_H, 1, [sys/byteorder.
 AC_CHECK_FUNC(daemon, [ AC_DEFINE(HAVE_DAEMON, 1, [daemon function is available]) ])
  
 if test "x${GCC}" = "xyes"; then
-	CFLAGS="$CFLAGS -W -Wall -Werror -Wno-unused-parameter -Wsign-compare"
+	CFLAGS="$CFLAGS -W -Wall -Wno-unused-parameter -Wsign-compare"
 fi
 
 CFLAGS="$CFLAGS -I../include \
