There was a duplicated entry for Tspi_TPM_Quote.3 file in install script, and install tool was generating an error, which stopped the install process. One of the entries was changed to Tspi_TPM_Quote2.3 to fix build issue and properly install the aforementioned man page.
Signed-off-by: Richard Maciel Costa <rmaciel@linux.vnet.ibm.com>
Acked-by: Joel Schopp <jschopp@linux.vnet.ibm.com>

--- a/man/man3/Makefile.am
+++ b/man/man3/Makefile.am
@@ -75,7 +75,7 @@ man3_MANS = Tspi_ChangeAuth.3 \
 	    Tspi_TPM_TakeOwnership.3 \
 	    Tspi_TPM_GetAuditDigest.3 \
 	    Tspi_TPM_OwnerGetSRKPubKey.3 \
-	    Tspi_TPM_Quote.3 \
+	    Tspi_TPM_Quote2.3 \
 	    Tspi_TPM_CMKSetRestrictions.3
 if TSS_BUILD_DAA
 man3_MANS += Tspi_DAA_IssueCredential.3 \
