--- a/man/man8/tcsd.8.in
+++ b/man/man8/tcsd.8.in
@@ -34,8 +34,8 @@ tcsd \- daemon that manages Trusted Computing resources
 
 .SH "DESCRIPTION"
 .PP
-Trousers is an open-source TCG Software Stack (TSS), released under the Common 
-Public License. Trousers aims to be compliant with the current (1.1b) and 
+Trousers is an open-source TCG Software Stack (TSS), released under the BSD
+License. Trousers aims to be compliant with the current (1.1b) and 
 upcoming (1.2) TSS specifications available from the Trusted Computing Group 
 website: http://www.trustedcomputinggroup.org.
 
