Add support for running tcsd as non TSS:TSS user+group.
When developing with tcsd it is currently required to create the user/group
TSS:TSS since tcsd will switch to it and check that config and state files
are owned by it. This can be troublesome in development environments where
you want to run tcsd as a user and not mess with global system settings.

Add configure switch --disable-usercheck for disable the TSS:TSS need of tcsd:
- No tcsd.conf and /var/lib/tpm owner-checking
- No switching to user by tcsd
- No useradd/groupadd and userdel/groupdel
- No chowns and chmods
- Warning at start of tcsd about this behaviour

Signed-off-by: Andreas Fuchs <andreas.fuchs@sit.fraunhofer.de>
Acked-by: Joel Schopp <jschopp@linux.vnet.ibm.com>
Tested-by: Richard Maciel <rmaciel@linux.vnet.ibm.com>

--- a/configure.in
+++ b/configure.in
@@ -86,6 +86,13 @@ AC_ARG_ENABLE(strict-spec-compliance,
 		 SPEC_COMP=1
 		 AC_MSG_RESULT([*** Enabling spec compliance at user request ***])],)
 
+# user+group checking
+AC_ARG_ENABLE(usercheck,
+		[AC_HELP_STRING([--disable-usercheck], [build TrouSerS without checking and setting of user/group tss [default=on] (Caution: This is intended for development purposes only.)])],
+		[AS_IF([test "x$enableval" = "xno"], [CFLAGS="$CFLAGS -DNOUSERCHECK"
+		AC_MSG_RESULT([*** Disabling user checking at user request ***])])],)
+AM_CONDITIONAL(NOUSERCHECK, [test "x$enable_usercheck" = "xno"])
+
 # daa math lib: gmp or openssl (default openssl)
 MATH_DEFINE=BI_OPENSSL
 AC_ARG_WITH([gmp],
