Changes to allow building on OS X
1) Not using GCC-specific LDFLAGS when compiling tcsd
2) Use of a public domain portable_endian.h to abstract the fact that you
   cannot #include <endian.h> on the Apple platform.
3) Addition of __APPLE__ to some places where __OpenBSD__ and __FreeBSD__
   appear
4) Definition of HOST_NAME_MAX to avoid including bits/local_lim.h on
   __APPLE__
   (I think this is a Linux-specific header)
5) Removal of 'inline' inside 'extern' functions which were being made
   available to other object files.
6) Minor change to 'gitignore' to also ignore the 'compile' script that
   gets generated.

--- a/configure.in
+++ b/configure.in
@@ -35,12 +35,18 @@ fi
 
 # Arch specific stuff
 case $target in
+	*darwin*)
+        	TCSD_LDFLAGS=""
+        	;;
 	*solaris*)
 		CFLAGS="$CFLAGS -DSOLARIS"
 		;;
         *)
+        	TCSD_LDFLAGS="-pie -Wl,-z,relro -Wl,-z,now"
                 ;;
 esac
+
+AC_SUBST(TCSD_LDFLAGS)
 
 # Non-standard OpenSSL location
 AC_MSG_CHECKING([Non-standard OpenSSL location])
